# data-uri

./: Cargo.toml  README.md
fixtures/: rust-logo-512x512.txt
lib/: Cargo.toml
lib/src/: data_uri_converter.rs
src/: data_uri_converter.rs  lib.rs  main.rs  state.rs
