[package]
name = "data-uri"
version = "1.0.0"
edition = "2021"
description = "Convert file to data URI, then output it to stdout"

[dependencies]
base64 = "0.21.7"
clap = { version = "4.4.18", features = ["derive"] }
tree_magic_mini = { version = "3.0.3", features = ["tree_magic_db", "with-gpl-data"] }
urlencoding = "2.1.3"

[dev-dependencies]
reqwest = { version = "0.11.24", features = ["blocking"] }
