[package]
name = "data-uri"
version = "1.0.3"
edition = "2021"
description = "Convert file to data URI, then output it to stdout"

[lib]
name = "data_uri_converter"
path = "src/lib.rs"

[dependencies]
# Error handling
anyhow = "1.0.82"

# Encodings
base64 = "0.22.1"
urlencoding = "2.1.3"

# CLI argument parsing
clap = { version = "4.5.4", features = ["derive"] }

# MIME type detection
tree_magic_mini = { version = "3.1.4", features = ["tree_magic_db", "with-gpl-data"] }
